# PythonOrderBroker

./: .gitignore  LICENSE  README.md  build_wasm.sh  docker-compose.yml  requirements.txt
dashboard/: dashboard.html
eelib/: CMakeLists.txt  abm.cpp  abm.h  agent.cpp  agent.h  main.cpp  match.h  matcher.cpp  matcher.h  notifier.cpp  order.cpp  order.h  tick.h  wasm_bindings.cpp
eelib/tests/: abm_test.cpp  agent_test.cpp
mosquitto/config/: mosquitto.conf
notebooks/: breeding_agents.ipynb  demo_broker.ipynb  import_src.py  neural_network_agent.ipynb  trading_with_agents.ipynb
orderbook/: CMakeLists.txt  Dockerfile  abm.cpp  abm.h  agent.cpp  agent.h  main.cpp  match.h  matcher.cpp  matcher.h  notifier.cpp  notifier.h  order.cpp  order.h  timestamp.h  utils.h
orderbook/orderbook_tests/: test_orderbook.cpp
orderbook/tests/: abm_test.cpp  matcher_test.cpp
prometheus/: prometheus.yml
pybroker/: broker_logging.py  broker_vis.py  event_publisher.py  models.py  order_broker.py  order_matching.py
pybroker/agents/: __init__.py  agent.py  agent_breeder.py  agent_vis.py  arbitrage.py  ffnn.py  random_monkey.py  random_trend_follower.py  revert_to_mean.py
src/: broker_logging.py  broker_vis.py  models.py  order_broker.py  order_matching.py
telegraf/: telegraf.conf
tests/: conftest.py  test_imports.py  test_matcher.py  test_order_broker.py
tests/agents/: test_ffnn.py
webdemo/: eelib.js  eelib.wasm  index.html
